lexer_parser/src/test/exempleFile/miniJaja/success/negAndMinus.mjj
class test{
    int a = -1 - 1;

    main{}
}