lexer_parser/src/test/exempleFile/miniJaja/fail/noMain.mjj
class noMain {
    int x = 1;

}